--- a/skillBot/frontend/src/styles/Home.css
+++ b/skillBot/frontend/src/styles/Home.css
@@ -1,93 +1,82 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500&display=swap');
-html{
-    padding:0;
-    margin: 0;
-}
-body{
-    padding:0;
-    margin: 0;
-    font-family: Poppins;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500&display=swap");
 
+.home {
+  user-select: none;
+  display: flex;
+  flex-direction: column;
 }
-.home{
-    display: flex;
-    flex-direction: column;
+.header {
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  background: rgba(238, 174, 202, 1);
+  align-items: center;
+  justify-content: center;
+  color: #202846;
 }
-.header{
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-    background: #3ec0bb;
-    align-items: center;
-    justify-content: center;
-    color:#202846;
-
+.header img {
+  height: 300px;
+  width: 300px;
 }
-.header img{
-    height: 300px;
-    width: 300px;
+.header-text {
+  padding: 30px;
 }
-.header-text{
-    padding: 30px;
+.header-text h1 {
+  font-size: 50px;
 }
-.header-text h1{
-    font-size: 50px;
+.cto {
+  margin: 0;
+  background-color: #202846;
+  color: aliceblue;
+  display: flex;
+  height: 20vh;
+  align-items: center;
+  justify-content: space-around;
 }
-.cto{
-    margin: 0;
-    background-color:#202846;
-    color: aliceblue;
-    display: flex;
-    height: 20vh;
-    align-items: center;
-    justify-content: space-around;
-
+.cto button {
+  margin-left: 30px;
+  margin-right: 30px;
+  background-color: rgba(148, 187, 233, 1);
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 4px;
 }
-.cto button{
-    margin-left: 30px;
-    margin-right: 30px;
-    background-color: #04AA6D;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 4px;
-}
-.cto p{
-    margin: 0;
-    padding-left: 30px;
-    font-weight: 500;
-    font-size: 20px;
+.cto p {
+  margin: 0;
+  padding-left: 30px;
+  font-weight: 500;
+  font-size: 20px;
 }
 
 @media only screen and (max-width: 800px) {
-   .header{
-    display:flex;
+  .header {
+    display: flex;
     flex-direction: column;
-    height:auto;
-   }
-   .cto{
+    height: auto;
+  }
+  .cto {
     padding-top: 10px;
     display: flex;
     flex-direction: column;
     height: auto;
-   }
-   .cto div{
+  }
+  .cto div {
     display: flex;
     flex-direction: column;
-   }
-   .cto button{
+  }
+  .cto button {
     margin-top: 20px;
     margin-bottom: 20px;
-   }
   }
-@media only screen and (min-width:800px){
-    .header{
-        height: 80vh;
-    }
-    
+}
+@media only screen and (min-width: 800px) {
+  .header {
+    height: 80vh;
+  }
 }
